revert to use sun.misc.BASE64Decoder/BASE64Encoder