@@ -1,7 +1,9 @@
 package io.snowcamp.papaya.doc;
 
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
+import java.io.IOException;
+import java.io.UncheckedIOException;
+//import java.nio.charset.StandardCharsets;
+//import java.util.Base64;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalDouble;
@@ -26,9 +28,15 @@ public interface Document extends Map<String, Object> {
   }
   
   default void putBlob(String key, byte[] blob) {
-    put(key, new String(Base64.getEncoder().encode(blob), StandardCharsets.ISO_8859_1));
+    put(key, new sun.misc.BASE64Encoder().encode(blob));
   }
   default Optional<byte[]> getBlob(String key) {
-    return get(key, String.class).map(base64 -> Base64.getDecoder().decode(base64));
+    return get(key, String.class).map(base64 -> {
+      try {
+        return new sun.misc.BASE64Decoder().decodeBuffer(base64);
+      } catch (IOException e) {
+        throw new UncheckedIOException(e);
+      }
+    });
   }
 }
